--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ on various real hardware into 3D-presentable VLH-runs. And vice-versa, it will a
 <p>This software is implemented as a webapp in javascript and X3DOM (<a href="http://www.x3dom.org">www.x3dom.org</a>). It runs in a WebGL-supporting
 browser (tested in Firefox and Chrome).</p>
 
+<p>Try it out <a href="VLH.html"> here </a>.</p>
+
 <p>The Virtual Liquid Handler has been originated by <a href="https://github.com/igorhollaender" class="user-mention">@igorhollaender</a> and the LEXOGEN company (<a href="http://www.lexogen.com">www.lexogen.com</a>)</p>
       </section>
     </div>
