Plate unification: all labware is now derived from a common UniversalPlate

--- a/VLH_debug.html
+++ b/VLH_debug.html
@@ -5,20 +5,19 @@
     <script type='text/javascript' src='http://x3dom.org/release/x3dom-full.js'> </script>
     <link rel='stylesheet' type='text/css' href='http://x3dom.org/release/x3dom.css'/>
 	<link rel='stylesheet' type='text/css' href='VLH.css'/>
-	<script type='text/javascript' src='JS/VLH_Core.js'> </script>
-	<script type='text/javascript' src='JS/VLH_Deck.js'> </script>
-	<script type='text/javascript' src='JS/VLH_Help.js'> </script>
-	<script type='text/javascript' src='JS/VLH_Plate96.js'> </script>
-	<script type='text/javascript' src='JS/VLH_Plate384.js'> </script>
-	<script type='text/javascript' src='JS/VLH_Pipettor.js'> </script>
-	<script type='text/javascript' src='JS/VLH_HamiltonSpecials.js'> </script>
-	<script type='text/javascript' src='JS/VLH_Liquid.js'> </script>
-	
 	<script type='text/javascript' src='JS/VLH_Async_Scheduler.js'> </script>
 	<script type='text/javascript' src='JS/VLH_Commands_Async.js'> </script>
+	<script type='text/javascript' src='JS/VLH_Core.js'> </script>
+	<script type='text/javascript' src='JS/VLH_Deck.js'> </script>		
+	<script type='text/javascript' src='JS/VLH_Help.js'> </script>
+	<script type='text/javascript' src='JS/VLH_Liquid.js'> </script>
+	<script type='text/javascript' src='JS/VLH_Pipettor.js'> </script>
+	<script type='text/javascript' src='JS/VLH_Plate.js'> </script>
+	<script type='text/javascript' src='JS/VLH_HamiltonSpecials.js'> </script>	
 	<script type='text/javascript' src='JS/VLH_Protocol_autoQuantSeq.js'> </script>
 	<script type='text/javascript' src='JS/VLH_Protocol_autoQuantSeq_STAR.js'> </script>
 	<script type='text/javascript' src='JS/VLH_Protocol_Tests.js'> </script>
+	
 	
 </head>
 <body>
@@ -29,10 +28,10 @@
 					//SetDeck("SCICLONE");
 					SetPipettor("PIPETTOR96",2);
 										
-					//StartProtocolAnimation("autoQuantSeq",{animationSpeed: ANIMATION_SPEED_NONE});
+					StartProtocolAnimation("autoQuantSeq",{animationSpeed: ANIMATION_SPEED_NORMAL});
 					
 					eval("var detailsOfThisRun=" + sessionStorage.getItem("detailsOfNextRun"));					
-					StartProtocolAnimation("autoQuantSeq_STAR",detailsOfThisRun);						
+					//StartProtocolAnimation("autoQuantSeq_STAR",detailsOfThisRun);						
 					//StartProtocolAnimation("DEMO1",{animationSpeed: ANIMATION_SPEED_NONE});
 					//StartProtocolAnimation("DEMO1",{animationSpeed: ANIMATION_SPEED_NORMAL});
 				}
@@ -103,7 +102,7 @@ showStat='false'>
 			 document.getElementById('X3DObject').runtime.resetView();"/>
 	</div>
 	<div style="margin:10">
-		<b>VIRTUAL LIQUID HANDLER, Ver. DEBUG 2014-08-06a (Experimental)</b>
+		<b>VIRTUAL LIQUID HANDLER, Ver. DEBUG 2014-08-19a (Experimental)</b>
 		Copyright (C)2014 <a href="http://www.lexogen.com">Lexogen GmbH.</a>.
 		Powered by <a href="http://www.x3dom.org">X3DOM.</a>
 		Tested with <a href="http://www.mozilla.org/en-US/firefox">Firefox 31.0.</a>
